Fix broken reference to openldap_server_pkgs.

--- a/tasks/install_ldap.yml
+++ b/tasks/install_ldap.yml
@@ -5,13 +5,12 @@
 
 - name: Install the openldap and required Packages for RedHat
   yum: name={{ item }} state=installed
-  with_items: openldap_server_pkgs
+  with_items: "{{ openldap_server_pkgs }}"
   when: ansible_os_family == 'RedHat'
-
 
 - name: Install the openldap and required Packages for Ubuntu
   apt: name={{ item }} state=installed update_cache=yes
-  with_items: openldap_server_pkgs
+  with_items: "{{ openldap_server_pkgs }}"
   environment: env
   when: ansible_os_family == 'Debian'
 
