--- a/tasks/install_ldap.yml
+++ b/tasks/install_ldap.yml
@@ -21,6 +21,11 @@
   shell: slappasswd -s {{ openldap_server_rootpw }}
   register: root_password
 
+- name: copy openssh-ldap schema
+  copy: src=openssh-ldap.schema dest="{{ openldap_server_app_path }}/schema/openssh-ldap.schema"
+  notify: 
+   - restart slapd
+
 - name: Copy the slapd.conf configuration file for Redhat
   template: src=slapd.conf.j2 dest={{ openldap_server_app_path }}/slapd.conf
   when: ansible_os_family == "RedHat"
